add gold management and UI status updates; enhance balloon classes and wave configuration